examples/valid/01_simple_function.moo
fun add(x: Int, y: Int) -> Int do 
  return x + y
end-add

fun main() -> Int do 
  return add(5, 10)
end-main
